--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,24 @@ body {
 
 .header {
     height: 98vh;
-    background-image: linear-gradient(
-        to right bottom, 
-        rgba(126, 213, 111, 0.8), 
-        rgba(40, 180, 133, 0.8)),
+    background-image: 
+        linear-gradient(
+            to right bottom, 
+            rgba(126, 213, 111, 0.8), 
+            rgba(40, 180, 133, 0.8)),
         url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    position: relative;
+}
+
+.logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.logo {
+    height: 35px;
 }
