--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-gray-dark: #777;
+$color-white: #fff;
 
 
 *,
@@ -60,7 +61,7 @@ body {
 }
 
 .heading-primary {
-    color: #fff;
+    color: $color-white;
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
@@ -111,7 +112,7 @@ body {
 }
 
 .btn--white {
-    background-color: #fff;
+    background-color: $color-white;
     color: $color-gray-dark;
 }
 
@@ -129,7 +130,7 @@ body {
 }
 
 .btn-white::after {
-    background-color: #fff;
+    background-color: $color-white;
 }
 
 .btn:hover::after {
