--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,9 @@
-@import "abstracts/_variables.scss";
-@import "abstracts/_functions.scss";
-@import "abstracts/_mixins.scss";
+@import "abstract/_variables.scss";
+@import "abstract/_functions.scss";
+@import "abstract/_mixins.scss";
 
 @import "base/_base.scss";
-@import "base/_animation.scss";
+@import "base/_animations.scss";
 @import "base/_typography.scss";
 @import "base/_utilities.scss";
 
@@ -12,3 +12,4 @@
 @import "components/_button.scss";
 
 @import "layout/_header.scss";
+@import "layout/_grid.scss";
