finished section about

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "pages/_home.scss";
 
 @import "components/_button.scss";
+@import "components/_composition.scss";
 
 @import "layout/_header.scss";
 @import "layout/_grid.scss";
